Champion ability alignment fix

--- a/src/styles/_viewChampion.scss
+++ b/src/styles/_viewChampion.scss
@@ -126,11 +126,19 @@
   }
 
   &__ability-img {
-    position: relative;
     display: block;
+    height: 100%;
     margin: 0 auto;
-    width: 50px;
     transition: .2s ease-in-out;
+    position: relative;
+    min-height: 70px;
+
+    svg {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
 
     &:hover svg,
     &.selected svg {
@@ -143,12 +151,20 @@
     flex-direction: column;
     justify-content: end;
     text-align: center;
+    align-items: center;
     width: 100%;
     border-right: 1px solid $primary;
-    padding: 0.5em;
+    padding: .5em 1em;
     cursor: pointer;
     position: relative;
     // Add Hover image color
+
+    &:first-child {
+      padding-left: 0;
+    }
+    &:last-child {
+      padding-right: 0;
+    }
 
     &:hover:before {
       svg {
